--- a/index.html
+++ b/index.html
@@ -38,11 +38,7 @@
         </div>
     </div>
 
-    <script>
-
-
-        
-    </script> 
+    <script src="app.js"> </script>
    
 </body>
 </html>
